@@ -1,4 +1,15 @@
-2002-09-10  Markus Germeier  <mager@informatik.uni-bremen.de>
+2002-09-10  Markus Germeier  <mager@tzi.de>
+
+	* libmpio/mpio.c (mpio_memory_format): 
+	  formatting works for internal and external memory now
+	  BEWARE: No config files are written, you might ruin your
+	  player!!!
+	* libmpio/mpio.c   (mpio_file_del): 
+	  deleting works for internal and external memory now (BEWARE !!!)
+	* support for deleting/formatting added to various parts of
+	  fat.c and io.c
+
+2002-09-10  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/fat.c (mpio_fatentry_set_free) 
 	(mpio_fatentry_set_defect): added functions
